# GatherSensorData

./: README.md
sensor/: CMakeLists.txt  main.cpp
sensor/sensor/: CMakeLists.txt  sensor.cpp  sensor.hpp  sensorInterface.cpp  sensorInterface.hpp
server/: CMakeLists.txt  main.cpp
server/server/: CMakeLists.txt  circularBuffer.cpp  circularBuffer.hpp  room.cpp  room.hpp  sensorSession.cpp  sensorSession.hpp  server.cpp  server.hpp
